fix spacing between persona buttons on dashboard

--- a/assets/sass/adminPanel.scss
+++ b/assets/sass/adminPanel.scss
@@ -209,11 +209,41 @@ label {
                 display: flex;
                 flex-direction: column;
                 width: 45%;
+                button {
+                    background-color: $yellow;
+                    color: white;
+                    font-family: 'Open Sans', sans-serif;
+                    height: 40px;
+                    width: 100%;
+                    border-radius: 0.07in;
+                    border: none;
+                    font-size: 15px;
+                    font-weight: 700;
+                    text-align: left;
+                    cursor: pointer;
+                    text-align: center;
+                    margin-bottom: 10px;
+                }
             }
             .merchandiserRight {
                 display: flex;
                 flex-direction: column;
                 width: 45%;
+                button {
+                    background-color: $yellow;
+                    color: white;
+                    font-family: 'Open Sans', sans-serif;
+                    height: 40px;
+                    width: 100%;
+                    border-radius: 0.07in;
+                    border: none;
+                    font-size: 15px;
+                    font-weight: 700;
+                    text-align: left;
+                    cursor: pointer;
+                    text-align: center;
+                    margin-bottom: 10px;
+                }
             }
         }
         span {
@@ -229,28 +259,43 @@ label {
         .shopperOne {
             width: 45%;
             display: inline-block;
+            button {
+                background-color: $yellow;
+                color: white;
+                font-family: 'Open Sans', sans-serif;
+                height: 40px;
+                width: 100%;
+                border-radius: 0.07in;
+                border: none;
+                font-size: 15px;
+                font-weight: 700;
+                text-align: left;
+                cursor: pointer;
+                text-align: center;
+                margin-bottom: 10px;
+            }
         }
         .shopperTwo {
             width: 45%;
             display: inline-block;
             float: right;
+            button {
+                background-color: $yellow;
+                color: white;
+                font-family: 'Open Sans', sans-serif;
+                height: 40px;
+                width: 100%;
+                border-radius: 0.07in;
+                border: none;
+                font-size: 15px;
+                font-weight: 700;
+                text-align: left;
+                cursor: pointer;
+                text-align: center;
+                margin-bottom: 10px;
+            }
         }
     }
-}
-.button {
-    background-color: $yellow;
-    color: white;
-    font-family: 'Open Sans', sans-serif;
-    height: 40px;
-    width: 100%;
-    border-radius: 0.07in;
-    border: none;
-    font-size: 15px;
-    font-weight: 700;
-    text-align: left;
-    cursor: pointer;
-    text-align: center;
-    margin-bottom: 10px;
 }
 .one {
     background-color: $red;
